@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    #297, make <enter> run the query profile viewer
     #305, make profiling work with newer Chrome
     #327, Add AutoDeps feature
     #325, add FileStdin to specify the stdin comes from a file
